--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "date-fns": "^2.17.0",
     "react": "^17.0.1",
+    "react-date-picker": "^8.0.7",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.10.0",
     "react-router-dom": "^5.2.0",
